--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}<!DOCTYPE html>
-<<html>
+<html>
   <head>
     <meta charset="utf-8">
     <title>{% block title %}Django Boards{% endblock %}</title>
