--- a/templates/reply_topic.html
+++ b/templates/reply_topic.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load humanize %}
+
 {% block title %}Post a reply{% endblock %}
 
 {% block stylesheet %}
@@ -38,7 +40,7 @@
             <strong class="text-muted">{{ post.created_by.username }}</strong>
           </div>
           <div class="col-6 text-right">
-            <small class="text-muted">{{ post.created_at }}</small>
+            <small class="text-muted">{{ post.created_at|naturaltime }}</small>
           </div>
         </div>
         {{ post.get_message_as_markdown }}
